@@ -437,6 +437,10 @@ div.digibib_list{
   border: 1px solid darken(white, 15);
   @include article-block-line-top($mina-blue);
   padding-top: 20px;
+  h1{
+    font-size: 24px;
+    margin-top: 0;
+  }
   table{
     border-collapse: separate;
     border-spacing: 10px 3px;
@@ -476,6 +480,11 @@ div.digibib_list{
   border: 1px solid darken(white, 15);
   @include article-block-line-top($mina-blue);
   padding-top: 20px;
+  margin-top: 10px;
+  h1{
+    font-size: 24px;
+    margin-top: 0;
+  }
   table{
     width: 100%;
     border-collapse: separate;
