@@ -7660,6 +7660,9 @@ div.digibib_list {
   background-color: white;
   margin-bottom: 15px;
   padding-top: 20px; }
+  .digibib_left h1 {
+    font-size: 24px;
+    margin-top: 0; }
   .digibib_left table {
     border-collapse: separate;
     border-spacing: 10px 3px;
@@ -7690,7 +7693,11 @@ div.digibib_list {
   padding: 0 15px 1px 15px;
   background-color: white;
   margin-bottom: 15px;
-  padding-top: 20px; }
+  padding-top: 20px;
+  margin-top: 10px; }
+  .meeting_left h1 {
+    font-size: 24px;
+    margin-top: 0; }
   .meeting_left table {
     width: 100%;
     border-collapse: separate;
