@@ -4,6 +4,9 @@ History of this buildout
 6.0.0 (unreleased)
 ------------------
 
+- Set digibib title inside the white background.  MINA-113.
+  [lhuiskes]
+
 - Less padding on editbar. [jladage]
 
 - Made Hearing use the views and macros from MREvent.  Moved the
